--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ training:
   epochs: 100
   batch_size: 128
   learning_rate: 0.1
-  weight_decay: 1e-4
+  weight_decay: 0.0001
   momentum: 0.9
   save_freq: 5
   model_save_path: "checkpoints/best_model.pth"
@@ -36,7 +36,7 @@ augmentation:
 
 # Logging settings
 logging:
-  project_name: "resnet50-imagenet"
+  project_name: "imagenet-resnet50"
   log_interval: 100
   wandb_enabled: false
 
